[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"
authors = ["antrix"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = [ "json" ] }
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }